# digital-twins

./: .gitignore  LICENSE  README.md  pyproject.toml
.streamlit/: config.toml
app/: main.py
app/components/: chat.py  graphs.py  propagation.py  refresh.py
app/views/: live_diagnostics.py  overview.py  root_cause_analysis.py
src/digital_twin/: app.py  data_loader.py  logger.py
src/digital_twin/components/: chat.py
src/digital_twin/schemas/: settings.py
