[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prometheux-digital-twin"
version = "0.1.0"
description = "Real-time engine diagnostic frontend powered by Vadalog."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "requests>=2.31.0",
    "networkx>=3.2.1",
    "pyvis>=0.3.2",
    "pydantic",
    "pydantic-settings"
]